# Space-Debris-Risk-Prediction

./: .env  .gitignore  Dockerfile  PPT_OUTLINE.md  browse_sgp4_data.py  debris.py  debris_hdfs.py  docker-compose-with-hdfs.yml  docker-compose.yml  docker-compose.yml.backup  extract_tle_subset.py  kafka_sgp4_pipeline_test.ipynb  n_debris_tle.py  n_debris_tle_hdfs.py  one_TLE.py  pyproject.toml  readme  requirements.txt  testing.ipynb  tle_to_state_vectors.py
Output/: satellites_and_objects_catalog.csv  space_debris_catalog.csv
dags/: airflow_dag_api_to_kafka.py
hadoop-config/: core-site.xml  hdfs-site.xml
script/: entrypoint.sh  hdfs-cli.sh  start-containers.sh
src/data/script/: download_sat.py  n_debris_tle.py  other_obj.py
src/demo/api/: test_tle_stream_client.py  tle_stream_api.py  tle_to_state_vectors.py
src/kafka/: README.md  README_SGP4_HDFS.md  STREAMING_ARCHITECTURE.md  setup_cassandra.sh  space_debris_spark_consumer.py  spark_sgp4_to_hdfs.py  spark_streaming_sgp4_risk.py  start_streaming.sh  test_e2e_pipeline.sh  test_sgp4_pipeline.sh  tle_api_to_kafka_producer.py
